[gd_scene load_steps=11 format=3 uid="uid://h58h742lvij0"]

[ext_resource type="Script" uid="uid://cy5dkhqfmoq71" path="res://buttons/scripts/pause_menu.gd" id="1_d3xb4"]
[ext_resource type="Texture2D" uid="uid://bppqph0qhfsdv" path="res://buttons/assets/resume_lc.png" id="2_mxa3g"]
[ext_resource type="Texture2D" uid="uid://ckawblek1o3wa" path="res://buttons/assets/options_lc.png" id="3_e8sti"]
[ext_resource type="Texture2D" uid="uid://b4fs54sv0ecdl" path="res://buttons/assets/resume_pressed_lc.png" id="3_mxa3g"]
[ext_resource type="Texture2D" uid="uid://p0sd561a566b" path="res://buttons/assets/options_pressed_lc.png" id="4_q2yj1"]
[ext_resource type="Texture2D" uid="uid://bb5sxi8omdrhh" path="res://buttons/assets/quit_lc.png" id="5_a32ks"]
[ext_resource type="Texture2D" uid="uid://p00bxxiwq7r6" path="res://buttons/assets/quit_pressed_lc.png" id="6_g7dbl"]
[ext_resource type="PackedScene" uid="uid://c7qgw42ydwd3v" path="res://options_menu.tscn" id="8_a32ks"]
[ext_resource type="Texture2D" uid="uid://clr28ekgvpeuh" path="res://buttons/assets/exit.png" id="9_g7dbl"]
[ext_resource type="Texture2D" uid="uid://dqnu6ewaiplwl" path="res://buttons/assets/exit_pressed.png" id="10_lv42l"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_d3xb4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.60784316)

[node name="Resume" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 481.0
offset_top = 181.0
offset_right = 2274.0
offset_bottom = 862.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("2_mxa3g")
texture_hover = ExtResource("3_mxa3g")

[node name="Options" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 481.0
offset_top = 268.0
offset_right = 2278.0
offset_bottom = 951.0
scale = Vector2(0.1, 0.1)
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("3_e8sti")
texture_hover = ExtResource("4_q2yj1")
stretch_mode = 3

[node name="Quit" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 481.0
offset_top = 355.0
offset_right = 2278.0
offset_bottom = 1041.0
scale = Vector2(0.1, 0.1)
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("5_a32ks")
texture_hover = ExtResource("6_g7dbl")
stretch_mode = 3

[node name="Options" parent="." instance=ExtResource("8_a32ks")]
visible = false

[node name="ExitOptions" type="TextureButton" parent="."]
visible = false
z_index = 3
offset_left = 8.0000305
offset_top = 574.0
offset_right = 1805.0
offset_bottom = 1260.0
scale = Vector2(0.1, 0.1)
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("9_g7dbl")
texture_hover = ExtResource("10_lv42l")
stretch_mode = 3

[connection signal="pressed" from="ColorRect/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect/Quit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ExitOptions" to="." method="_on_exit_options_pressed"]
